--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,12 @@
 	"version": 2,
 	"public": false,
 	"functions": {
-		"main.py": {
+		"api/main.py": {
       		"runtime": "@vercel/python@0.4.0",
       		"maxDuration": 10
     	}
   	},
   	"rewrites": [
-    	{ "source": "/(.*)", "destination": "main.py" }
+    	{ "source": "/(.*)", "destination": "/api/main.py" }
   	]
 }
